--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,11 +17,15 @@
 	"workspaceFolder": "/app",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
-		"editor.formatOnSave": true
+		"editor.formatOnSave": true,
+		"rust-client.rustupPath": "/usr/local/cargo/bin/rustup",
+		"[rust]": {
+			"editor.defaultFormatter": "rust-lang.rust-analyzer"
+		}
 	},
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"rust-lang.rust"
+		"rust-lang.rust-analyzer"
 	]
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
